# diseases-knowlage-base-dash

./: README.md  docker-compose.yml  pyproject.toml
desease_knowlage_base/: app.py  main.py
desease_knowlage_base/callbacks/: create_classes.py
desease_knowlage_base/layouts/: create_model.py  navbar.py
desease_knowlege_base/: app.py  config.py  knowledge_base_model_generator.py  main.py
desease_knowlege_base/callbacks/: alternatives_callbacks.py  create_classes.py  create_train.py
desease_knowlege_base/layouts/: alternatives_layout.py  create_model.py  generate_train.py  navbar.py
sql/: create_desease_classes.sql  create_desease_train.sql
