[tool.poetry]
name = "diseases-knowlege-base-dash"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "diseases_knowlege_base_dash"}]

[tool.poetry.dependencies]
python = "^3.10"
dash = "^2.6.2"
dash-extensions = "^0.1.6"
dash-bootstrap-components = "^1.2.1"


[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"
pylint = "^2.15.3"
mypy = "^0.982"
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
